--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="div1">
                     <button>0</button>
-                    <button id="decimal">.</button>
+                    <button>.</button>
                 </div>
             </div>
             <div class="operators">
